--- a/coba2niko/parallax.html
+++ b/coba2niko/parallax.html
@@ -38,7 +38,7 @@
 
   <div class="container-fluid p-0 mg-0">
     <section id="awal">
-        <div class="parallax intro">
+        <div class="parallax kota">
             <div class="row">
                 <div class="col-sm-12 justify-content-center css-jakarta">       
                   <div class="content-box">
@@ -57,19 +57,98 @@
                   </div>
             </div>       
           </div>
+          <div class="slider">
+            <div class="slide-track">
+              <div class="slide">
+                <img src="../src/gambar/jakarta/jakarta-car1.jpg" height="170" width="270" alt="" />
+              </div>
+              <div class="slide">
+                <img src="../src/gambar/jakarta/jakarta-car2.jpg" height="170" width="270" alt="" />
+              </div>
+              <div class="slide">
+                <img src="../src/gambar/jakarta/jakarta-car3.jpg" height="170" width="270" alt="" />
+              </div>
+              <div class="slide">
+                <img src="../src/gambar/jakarta/jakarta-car4.jpg" height="170" width="270" alt="" />
+              </div>
+              <div class="slide">
+                <img src="../src/gambar/jakarta/jakarta-car5.jpg" height="170" width="270" alt="" />
+              </div>
+              <div class="slide">
+                <img src="../src/gambar/jakarta/jakarta-car6.jpg" height="170" width="270" alt="" />
+              </div>
+              <div class="slide">
+                <img src="../src/gambar/jakarta/jakarta-car7.jpg" height="170" width="270" alt="" />
+              </div>
+              <div class="slide">
+                <img src="../src/gambar/jakarta/jakarta-car1.jpg" height="170" width="270" alt="" />
+              </div>
+              <div class="slide">
+                <img src="../src/gambar/jakarta/jakarta-car2.jpg" height="170" width="270" alt="" />
+              </div>
+              <div class="slide">
+                <img src="../src/gambar/jakarta/jakarta-car3.jpg" height="170" width="270" alt="" />
+              </div>
+              <div class="slide">
+                <img src="../src/gambar/jakarta/jakarta-car4.jpg" height="170" width="270" alt="" />
+              </div>
+              <div class="slide">
+                <img src="../src/gambar/jakarta/jakarta-car5.jpg" height="170" width="270" alt="" />
+              </div>
+              <div class="slide">
+                <img src="../src/gambar/jakarta/jakarta-car6.jpg" height="170" width="270" alt="" />
+              </div>
+              <div class="slide">
+                <img src="../src/gambar/jakarta/jakarta-car7.jpg" height="170" width="270" alt="" />
+              </div>
+            </div>
+          </div>
         </div>
     </section>
     
     <section id="wisata">
-        <div class="parallax content">
-        
+        <div class="parallax wisata">
+          <h1>Placeholder text, idk what to put here</h1>
+    <div class="container-wisata">
+      <div class="cont-items">
+        <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
+          <p>Small title</p>
+        </div>
+        <img src="https://images.unsplash.com/photo-1558637845-c8b7ead71a3e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1632&q=80"</img>
+        </div>
+      <div class="cont-items">
+        <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
+          <p>Small title</p>
+        </div>
+        <img src="https://images.unsplash.com/photo-1559511331-6a3a4e72f588?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1547&q=80"</img>
+      </div>
+      <div class="cont-items">
+        <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
+          <p>Small title</p>
+        </div>
+        <img src="https://images.unsplash.com/photo-1580757468214-c73f7062a5cb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1632&q=80">
+      </div>
+      <div class="cont-items">
+        <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
+          <p>Small title</p>
+        </div>
+        <img src="https://images.unsplash.com/photo-1588002906804-8eba97798fca?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"></img>
+      </div>
+      <div class="cont-items">
+        <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
+          <p>Small title</p>
+        </div>
+        <img src="https://images.unsplash.com/photo-1595835018349-198460e1d309?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1631&q=80"</img>
+      </div>
+    </div>
+    <div class="bg"></div>
 
         </div>
         <!-- <div class="parallax blank"></div> -->
     </section>
 
     <section id="kuliner">   
-    <div class="justify-content-center align-items-center parallax footer">
+    <div class="justify-content-center align-items-center parallax kuliner">
       <div class="br"></div>
 
     <div class="blog-slider">
@@ -121,6 +200,18 @@
     </div>
   </div>
     </section>
+    <footer class="footer">
+      <div class="row mt-6 d-flex flex-md-row flex-column justify-content-center align-items-center text-center pt-6 pb-6 mx-auto">
+        <div class="col-md-6 text-center mb-3 mb-md-0">
+          <h5 class="fw-bold">Indonesia Travel Guide Map</h5>
+          <p>Created by Group 9</p>
+          <p>&copy; 2023</p>
+        </div>
+        <div class="col-md-6 d-flex justify-content-center">
+          <a href="https://www.umn.ac.id/?gclid=Cj0KCQjwz6ShBhCMARIsAH9A0qVQt97EhNy_s9RZUcjBO5DhdSBqRIu4afR-F624j4SQ2hUJ7KnAqnQaAhKlEALw_wcB"><img src="../about/images/logo-akreditasi.png" class="img-fluid"></a>
+        </div>
+      </div>
+    </footer>
 
 </div> 
 
