--- a/about/about.html
+++ b/about/about.html
@@ -44,7 +44,7 @@
         </div>
     </div>
 
-    <footer>
+    <footer class="footer">
       <div class="row mt-6 d-flex flex-md-row flex-column justify-content-center align-items-center text-center pt-6 pb-6 mx-auto">
         <div class="col-md-6 text-center mb-3 mb-md-0">
           <h5 class="fw-bold">Indonesia Travel Guide Map</h5>
