--- a/Homescreen/homescreen.html
+++ b/Homescreen/homescreen.html
@@ -51,154 +51,151 @@
     function Padang(place) {
       var detailsBox = document.getElementById("detailsBox");
       detailsBox.innerHTML = `
+        <button class="close-button" onclick="closeDetails()">X</button>
+        <h1>Padang</h1>
         <img src="../img/Padang.jpg" alt="Gallery Image" class="max-size"><br/><br/>
         <div class="tooltip-content">
-          <p>Wisata yang pertama adalah pantai Sanur. Tempat ini adalah tujuan utama pengunjung yang ingin menikmati keindahan pantai di Denpasar. Pantai ini selalu ramai oleh turis lokal maupun mancanegara.</p>
-          <p>Wisata ini adalah spot paling cocok untuk menyaksikan pemandangan matahari terbit yang eksotis. Ombak yang ada di wisata ini pun juga menjadi pilihan yang tepat untuk para pengunjung yang senang berselancar.</p>
+          <p>Padang adalah kota di Provinsi Sumatera Barat, Indonesia. Terkenal dengan keindahan alamnya dan masakan Padang yang lezat, Padang menawarkan pengalaman wisata yang menarik. Anda dapat menikmati pantai-pantai yang indah seperti Pantai Air Manis dan Pantai Padang Padang, serta menjelajahi warisan budaya Minangkabau seperti Istana Pagaruyung. Jelajahi kota ini dan nikmati keindahan alam serta kuliner yang khas.</p>
         </div>
         <br/><br/><a href="https://www.google.com">See More...</a>
       `;
       detailsBox.style.display = "block";
-      setTimeout(function() {
-        detailsBox.style.display = "none";
-      }, 2000);
+
     }
     function Medan(place) {
       var detailsBox = document.getElementById("detailsBox");
       detailsBox.innerHTML = `
+        <button class="close-button" onclick="closeDetails()">X</button>
+        <h1>Medan</h1>
         <img src="../img/Medan.jpg" alt="Gallery Image" class="max-size"><br/><br/>
         <div class="tooltip-content">
-          <p>Wisata yang pertama adalah pantai Sanur. Tempat ini adalah tujuan utama pengunjung yang ingin menikmati keindahan pantai di Denpasar. Pantai ini selalu ramai oleh turis lokal maupun mancanegara.</p>
-          <p>Wisata ini adalah spot paling cocok untuk menyaksikan pemandangan matahari terbit yang eksotis. Ombak yang ada di wisata ini pun juga menjadi pilihan yang tepat untuk para pengunjung yang senang berselancar.</p>
+          <p>Medan, terletak di Sumatera Utara, adalah kota terbesar di Pulau Sumatera, Indonesia. Dikenal sebagai "Kota Melayu Deli," Medan memiliki sejarah yang kaya dan budaya yang beragam. Kota ini memiliki pesona yang unik dengan gabungan kekayaan warisan budaya Melayu, Tionghoa, dan Eropa. Medan juga menjadi gerbang utama untuk menjelajahi keindahan alam Sumatera Utara, termasuk Danau Toba yang terkenal. Dengan berbagai atraksi wisata, kuliner yang lezat, dan keramahan penduduknya, Medan adalah tempat yang menarik untuk dijelajahi dan dinikmati.</p>
         </div>
-        <br/><br/><a href="https://www.google.com">See More...</a>
+        <br/><a href="https://www.google.com">See More...</a>
       `;
       detailsBox.style.display = "block";
-      setTimeout(function() {
-        detailsBox.style.display = "none";
-      }, 2000);
+
     }
     function Pontianak(place) {
       var detailsBox = document.getElementById("detailsBox");
       detailsBox.innerHTML = `
+        <button class="close-button" onclick="closeDetails()">X</button>
+        <h1>Pontianak</h1>
         <img src="../img/Pontianak.jpg" alt="Gallery Image" class="max-size"><br/><br/>
         <div class="tooltip-content">
-          <p>Wisata yang pertama adalah pantai Sanur. Tempat ini adalah tujuan utama pengunjung yang ingin menikmati keindahan pantai di Denpasar. Pantai ini selalu ramai oleh turis lokal maupun mancanegara.</p>
-          <p>Wisata ini adalah spot paling cocok untuk menyaksikan pemandangan matahari terbit yang eksotis. Ombak yang ada di wisata ini pun juga menjadi pilihan yang tepat untuk para pengunjung yang senang berselancar.</p>
+          <p>Pontianak, "Kota Khatulistiwa," terletak di Provinsi Kalimantan Barat, Indonesia. Dengan Equator Monument yang menandai garis khatulistiwa dan Sungai Kapuas yang indah, kota ini menawarkan pengalaman unik. Jelajahi warisan budaya seperti Masjid Jami Pontianak dan Kota Tua Pontianak. Nikmati pesona kota ini yang kaya akan keindahan alam dan budaya.</p>
         </div>
-        <br/><br/><a href="https://www.google.com">See More...</a>
+        <br/><a href="https://www.google.com">See More...</a>
       `;
       detailsBox.style.display = "block";
-      setTimeout(function() {
-        detailsBox.style.display = "none";
-      }, 2000);
+
     }
     function Samarinda(place) {
       var detailsBox = document.getElementById("detailsBox");
       detailsBox.innerHTML = `
+        <button class="close-button" onclick="closeDetails()">X</button>
+        <h1>Samarinda</h1>
         <img src="../img/Samarinda.jpg" alt="Gallery Image" class="max-size"><br/><br/>
         <div class="tooltip-content">
-          <p>Wisata yang pertama adalah pantai Sanur. Tempat ini adalah tujuan utama pengunjung yang ingin menikmati keindahan pantai di Denpasar. Pantai ini selalu ramai oleh turis lokal maupun mancanegara.</p>
-          <p>Wisata ini adalah spot paling cocok untuk menyaksikan pemandangan matahari terbit yang eksotis. Ombak yang ada di wisata ini pun juga menjadi pilihan yang tepat untuk para pengunjung yang senang berselancar.</p>
+          <p>Samarinda adalah ibu kota Provinsi Kalimantan Timur, Indonesia. Terkenal dengan Sungai Mahakam yang indah dan hutan bakau yang luas, kota ini menawarkan pengalaman alam yang menarik. Nikmati pemandangan sungai yang menakjubkan dan jelajahi kekayaan alamnya.</p>
         </div>
-        <br/><br/><a href="https://www.google.com">See More...</a>
+        <br/><a href="https://www.google.com">See More...</a>
       `;
       detailsBox.style.display = "block";
-      setTimeout(function() {
-        detailsBox.style.display = "none";
-      }, 2000);
+
     }
     function Makassar(place) {
       var detailsBox = document.getElementById("detailsBox");
       detailsBox.innerHTML = `
+        <button class="close-button" onclick="closeDetails()">X</button>
+        <h1>Makassar</h1>
         <img src="../img/Makassar.jpg" alt="Gallery Image" class="max-size"><br/><br/>
         <div class="tooltip-content">
-          <p>Wisata yang pertama adalah pantai Sanur. Tempat ini adalah tujuan utama pengunjung yang ingin menikmati keindahan pantai di Denpasar. Pantai ini selalu ramai oleh turis lokal maupun mancanegara.</p>
-          <p>Wisata ini adalah spot paling cocok untuk menyaksikan pemandangan matahari terbit yang eksotis. Ombak yang ada di wisata ini pun juga menjadi pilihan yang tepat untuk para pengunjung yang senang berselancar.</p>
-        </div>
-        <br/><br/><a href="https://www.google.com">See More...</a>
+          <p>Makassar, juga dikenal sebagai Ujung Pandang, adalah kota terbesar di Sulawesi Selatan, Indonesia. Terletak di pantai barat daya pulau ini, Makassar menawarkan sejarah yang kaya dan kuliner lezat. Jelajahi Benteng Rotterdam dan nikmati makanan khas seperti Coto Makassar dan Konro. Nikmati pesona kota ini yang mencerminkan kekayaan budaya dan keindahan alam Sulawesi Selatan.</p>
+          </div>
+        <br/><a href="https://www.google.com">See More...</a>
       `;
       detailsBox.style.display = "block";
-      setTimeout(function() {
-        detailsBox.style.display = "none";
-      }, 2000);
+
     }
     function Manado(place) {
       var detailsBox = document.getElementById("detailsBox");
       detailsBox.innerHTML = `
+        <button class="close-button" onclick="closeDetails()">X</button>
+        <h1>Manado</h1>
         <img src="../img/Manado.jpg" alt="Gallery Image" class="max-size"><br/><br/>
         <div class="tooltip-content">
-          <p>Wisata yang pertama adalah pantai Sanur. Tempat ini adalah tujuan utama pengunjung yang ingin menikmati keindahan pantai di Denpasar. Pantai ini selalu ramai oleh turis lokal maupun mancanegara.</p>
-          <p>Wisata ini adalah spot paling cocok untuk menyaksikan pemandangan matahari terbit yang eksotis. Ombak yang ada di wisata ini pun juga menjadi pilihan yang tepat untuk para pengunjung yang senang berselancar.</p>
-        </div>
-        <br/><br/><a href="https://www.google.com">See More...</a>
+          <p>Manado, ibu kota Provinsi Sulawesi Utara, Indonesia, terkenal dengan keindahan alam bawah lautnya. Taman Laut Bunaken adalah tujuan utama untuk menyelam dan menikmati keanekaragaman terumbu karang yang menakjubkan. Kota ini juga memiliki warisan budaya yang kaya dengan pengaruh suku Minahasa. Nikmati pesona alam dan budaya Manado dalam perjalanan Anda.</p>
+          </div>
+        <br/><a href="https://www.google.com">See More...</a>
       `;
       detailsBox.style.display = "block";
-      setTimeout(function() {
-        detailsBox.style.display = "none";
-      }, 2000);
+
     }
     function Jakarta(place) {
       var detailsBox = document.getElementById("detailsBox");
       detailsBox.innerHTML = `
+        <button class="close-button" onclick="closeDetails()">X</button>
+        <h1>Jakarta</h1>
         <img src="../img/Jakarta.jpg" alt="Gallery Image" class="max-size"><br/><br/>
         <div class="tooltip-content">
-          <p>Wisata yang pertama adalah pantai Sanur. Tempat ini adalah tujuan utama pengunjung yang ingin menikmati keindahan pantai di Denpasar. Pantai ini selalu ramai oleh turis lokal maupun mancanegara.</p>
-          <p>Wisata ini adalah spot paling cocok untuk menyaksikan pemandangan matahari terbit yang eksotis. Ombak yang ada di wisata ini pun juga menjadi pilihan yang tepat untuk para pengunjung yang senang berselancar.</p>
-        </div>
-        <br/><br/><a href="https://www.google.com">See More...</a>
+          <p>Jakarta adalah ibu kota dan kota terbesar di Indonesia. Terletak di Pulau Jawa, Jakarta adalah pusat politik, ekonomi, dan budaya negara ini. Kota ini menawarkan berbagai atraksi, seperti Monumen Nasional (Monas), Taman Mini Indonesia Indah, dan Ancol Dreamland. Selain itu, Jakarta juga memiliki pusat perbelanjaan yang terkenal, seperti Plaza Indonesia dan Grand Indonesia. Dengan kehidupan malam yang beragam, kuliner lezat, dan keramahan penduduknya, Jakarta adalah tempat yang menarik untuk dijelajahi dan dinikmati.</p>
+          </div>
+        <br/><a href="https://www.google.com">See More...</a>
       `;
       detailsBox.style.display = "block";
-      setTimeout(function() {
-        detailsBox.style.display = "none";
-      }, 2000);
+
     }
 
     function Denpasar(place) {
       var detailsBox = document.getElementById("detailsBox");
       detailsBox.innerHTML = `
+        <button class="close-button" onclick="closeDetails()">X</button>
+        <h1>Denpasar</h1>
         <img src="../img/Denpasar.jpeg" alt="Gallery Image" class="max-size"><br/><br/>
         <div class="tooltip-content">
-          <p>Wisata yang pertama adalah pantai Sanur. Tempat ini adalah tujuan utama pengunjung yang ingin menikmati keindahan pantai di Denpasar. Pantai ini selalu ramai oleh turis lokal maupun mancanegara.</p>
-          <p>Wisata ini adalah spot paling cocok untuk menyaksikan pemandangan matahari terbit yang eksotis. Ombak yang ada di wisata ini pun juga menjadi pilihan yang tepat untuk para pengunjung yang senang berselancar.</p>
+          <p>Denpasar adalah ibu kota Provinsi Bali, Indonesia. Terletak di pantai selatan Pulau Bali, kota ini merupakan pusat administrasi, perdagangan, dan budaya Bali. Jelajahi Pura Jagatnatha, Pasar Badung, dan museum-museum yang menampilkan seni dan budaya Bali. Nikmati pesona budaya Bali dan suasana pantai yang indah di Denpasar.</p>
         </div>
-        <br/><br/><a href="https://www.google.com">See More...</a>
+        <br/><a href="https://www.google.com">See More...</a>
       `;
       detailsBox.style.display = "block";
-      setTimeout(function() {
-        detailsBox.style.display = "none";
-      }, 2000);
+
     }
     function Jayapura(place) {
       var detailsBox = document.getElementById("detailsBox");
       detailsBox.innerHTML = `
+        <button class="close-button" onclick="closeDetails()">X</button>
+        <h1>Jayapura</h1>
         <img src="../img/Jayapura.jpg" alt="Gallery Image" class="max-size"><br/><br/>
         <div class="tooltip-content">
-          <p>Wisata yang pertama adalah pantai Sanur. Tempat ini adalah tujuan utama pengunjung yang ingin menikmati keindahan pantai di Denpasar. Pantai ini selalu ramai oleh turis lokal maupun mancanegara.</p>
-          <p>Wisata ini adalah spot paling cocok untuk menyaksikan pemandangan matahari terbit yang eksotis. Ombak yang ada di wisata ini pun juga menjadi pilihan yang tepat untuk para pengunjung yang senang berselancar.</p>
+          <p>Jayapura adalah ibu kota Provinsi Papua, Indonesia, yang terletak di pantai utara Pulau Papua. Kota ini dikenal dengan keindahan alamnya yang menakjubkan, dengan pegunungan yang mempesona dan air terjun yang spektakuler. Selain itu, Jayapura juga memiliki pesona pantai yang memikat dan danau-danau yang menyejukkan. Tempat ini merupakan surga bagi para pecinta alam dan penggemar petualangan yang ingin menjelajahi kekayaan alam Papua yang eksotis.</p>
         </div>
-        <br/><br/><a href="https://www.google.com">See More...</a>
+        <br/><a href="https://www.google.com">See More...</a>
       `;
       detailsBox.style.display = "block";
-      setTimeout(function() {
-        detailsBox.style.display = "none";
-      }, 2000);
+
     }
     function Sorong(place) {
       var detailsBox = document.getElementById("detailsBox");
       detailsBox.innerHTML = `
+        <button class="close-button" onclick="closeDetails()">X</button>
+        <h1>Sorong</h1>
         <img src="../img/Sorong.jpg" alt="Gallery Image" class="max-size"><br/><br/>
         <div class="tooltip-content">
-          <p>Wisata yang pertama adalah pantai Sanur. Tempat ini adalah tujuan utama pengunjung yang ingin menikmati keindahan pantai di Denpasar. Pantai ini selalu ramai oleh turis lokal maupun mancanegara.</p>
-          <p>Wisata ini adalah spot paling cocok untuk menyaksikan pemandangan matahari terbit yang eksotis. Ombak yang ada di wisata ini pun juga menjadi pilihan yang tepat untuk para pengunjung yang senang berselancar.</p>
+          <p>Sorong, terletak di Provinsi Papua Barat, Indonesia, adalah gerbang utama untuk menjelajahi keindahan alam Papua yang menakjubkan. Kota ini terkenal sebagai titik awal untuk menuju Raja Ampat, sebuah surga bagi penyelam dengan keanekaragaman hayati bawah laut yang luar biasa. Selain itu, Sorong juga menawarkan pantai-pantai yang indah, pulau-pulau eksotis, dan hutan-hutan yang mempesona. Bagi para petualang dan pencinta alam, Sorong menjadi pintu masuk yang menarik untuk menjelajahi keajaiban alam yang tak ternilai di Papua Barat.</p>
         </div>
-        <br/><br/><a href="https://www.google.com">See More...</a>
+        <br/><a href="https://www.google.com">See More...</a>
       `;
       detailsBox.style.display = "block";
-      setTimeout(function() {
-        detailsBox.style.display = "none";
-      }, 2000);
+
     }
+
+    function closeDetails() {
+      var detailsBox = document.getElementById("detailsBox");
+      detailsBox.style.display = "none";
+    }
+
+
 
   </script>
   <script src="https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js" crossorigin></script>
