--- a/Homescreen/map.html
+++ b/Homescreen/map.html
@@ -4,71 +4,149 @@
   <title>Click to Point on Map</title>
   <style>
     html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      overflow: hidden;
-    }
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow: hidden;
+}
 
-    .container {
-      display: flex;
-      height: 100%;
-    }
+.container {
+  display: flex;
+  height: 100%;
+}
 
-    .nav {
-      flex: 0 0 auto;
-      background-color: #f1f1f1;
-      padding: 20px;
-    }
+.nav {
+  flex: 0 0 auto;
+  background-color: #f1f1f1;
+  padding: 20px;
+}
 
-    .map-container {
-      flex: 1 1 auto;
-      position: relative;
-    }
+.map-container {
+  flex: 1 1 auto;
+  position: relative;
+}
 
-    .image-container {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-    }
+.image-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-    .map {
-      width: 100%;
-      height: 100%;
-    }
+.map {
+  width: 100%;
+  height: 100%;
+}
 
-    .point {
-      position: absolute;
-      width: 10px;
-      height: 10px;
-      background-color: red;
-      border-radius: 50%;
-      cursor: pointer;
-    }
+.point {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  background-color: red;
+  border-radius: 50%;
+  cursor: pointer;
+}
 
-    .hover-box {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background-color: rgba(0, 0, 0, 0.8);
-      color: white;
-      padding: 10px;
-      display: none;
-    }
+.hover-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  padding: 15px;
+  display: none;
+  text-align: right;
+}
+
+.hover-box p{
+  margin-left: 10px;
+  margin-right: 10px;
+  text-align: center;
+  margin-top: -10px;
+}
+
+.hover-box h1{
+  text-align: center;
+  margin-top: -20px;
+}
+
+.hover-box a{
+  color: aqua;
+}
+
+
+.hover-box img {
+  display: block;
+  margin: 0 auto;
+  width: 50%;
+  height: 50%;
+}
+
+.hover-box button{
+  text-align: right;
+  border-radius: 100px;
+}
+
+.tooltip {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  padding: 10px;
+  border-radius: 4px;
+  display: none;
+}
+
+.point:hover .tooltip {
+  display: block;
+}
+
+.max-size {
+  max-width: 75%;
+  max-height: 50%;
+}
+
+ul.navbar {
+  list-style-type: none;
+  color: white;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+ul.navbar li {
+  display: inline-block;
+}
+
+ul.navbar li a {
+  display: block;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+ul.navbar li a:hover {
+  background-color: #111;
+}
+
   </style>
 </head>
 <body>
+  
+    <ul class="navbar">
+      <li>Travelindo</li>
+      <li><a href="#">Beranda</a></li>
+      <li><a href="#">Tentang</a></li>
+      <li><a href="#">Produk</a></li>
+      <li><a href="#">Kontak</a></li>
+    </ul>
   <div class="container">
-    <div class="nav">
-      <ul>
-        <li><a href="#">Item 1</a></li>
-        <li><a href="#">Item 2</a></li>
-        <li><a href="#">Item 3</a></li>
-      </ul>
-    </div>
     <div class="map-container">
       <div class="image-container" onclick="movePinpoint(event)">
         <img src="../img/Indo_map.png" alt="Image" class="map"/>
