--- a/coba2niko/parallax.html
+++ b/coba2niko/parallax.html
@@ -108,37 +108,37 @@
     
     <section id="wisata">
         <div class="parallax wisata">
-          <h1>Placeholder text, idk what to put here</h1>
+          <h1 style="display: flex; text-align:center; color:white; padding-top: 10px; padding-left:10px;">Rekomendasi Wisata:</h1>
     <div class="container-wisata">
       <div class="cont-items">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
           <p>Small title</p>
         </div>
-        <img src="https://images.unsplash.com/photo-1558637845-c8b7ead71a3e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1632&q=80"</img>
+        <img src="../src/gambar/jakarta/wisata/wisata-taman-mini.jpeg"</img>
         </div>
       <div class="cont-items">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
           <p>Small title</p>
         </div>
-        <img src="https://images.unsplash.com/photo-1559511331-6a3a4e72f588?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1547&q=80"</img>
+        <img src="../src/gambar/jakarta/wisata/wisata-dufan.png"</img>
       </div>
       <div class="cont-items">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
           <p>Small title</p>
         </div>
-        <img src="https://images.unsplash.com/photo-1580757468214-c73f7062a5cb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1632&q=80">
+        <img src="../src/gambar/jakarta/wisata/wisata-pik.jpg">
       </div>
       <div class="cont-items">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
           <p>Small title</p>
         </div>
-        <img src="https://images.unsplash.com/photo-1588002906804-8eba97798fca?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"></img>
+        <img src="../src/gambar/jakarta/wisata/wisata-monas.jpg">
       </div>
       <div class="cont-items">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
           <p>Small title</p>
         </div>
-        <img src="https://images.unsplash.com/photo-1595835018349-198460e1d309?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1631&q=80"</img>
+        <img src="../src/gambar/jakarta/wisata/wisata-kota-tua.jpg">
       </div>
     </div>
     <div class="bg"></div>
