--- a/coba2niko/parallax.html
+++ b/coba2niko/parallax.html
@@ -108,7 +108,9 @@
     
     <section id="wisata">
         <div class="parallax wisata">
-          <h1 style="display: flex; text-align:center; color:white; padding-top: 10px; padding-left:10px;">Rekomendasi Wisata:</h1>
+          <h1 style="display: flex; text-align:center; padding-top: 10px;"></h1>
+          <div class="br"></div>
+          <br>
     <div class="container-wisata">
       <div class="cont-items">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
@@ -131,6 +133,9 @@
       <div class="cont-items">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
           <p>Small title</p>
+        </div>
+        <div class="icon-desc">
+          <p></p>
         </div>
         <img src="../src/gambar/jakarta/wisata/wisata-monas.jpg">
       </div>
