--- a/coba2niko/parallax.html
+++ b/coba2niko/parallax.html
@@ -115,11 +115,11 @@
       <div class="cont-items">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
           <p>Small title</p>
-          <div class="centerForm">
-            <p contenteditable="true">This is an editable paragraph. Normally I have a border around me on focus, but not today!</p>
-          </div>
         </div>
-        <img src="../src/gambar/jakarta/wisata/wisata-taman-mini.jpeg">
+        <div class="centerForm">
+          <p >This is an editable paragraph. Normally I have a border around me on focus, but not today!</p>
+        </div>
+        <!-- <img src="../src/gambar/jakarta/wisata/wisata-taman-mini.jpeg"> -->
       </div>
       <div class="cont-items">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
