--- a/coba2niko/parallax.html
+++ b/coba2niko/parallax.html
@@ -115,17 +115,17 @@
       <div class="cont-items">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
           <p>Small title</p>
+          <div class="centerForm">
+            <p contenteditable="true">This is an editable paragraph. Normally I have a border around me on focus, but not today!</p>
+          </div>
         </div>
-        <div class="centerForm">
-          <textarea cols="60" rows="8" maxlength="100" placeholder="Describe yourself">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean volutpat diam vitae purus hendrerit, a ullamcorper odio dictum. Sed leo mi, scelerisque id posuere at, lobortis pharetra lectus. Duis faucibus porttitor lorem vitae posuere. Nulla et metus sit amet lorem ullamcorper mollis sit amet vitae ante. </textarea>
-        </div>
-        </div>
+        <img src="../src/gambar/jakarta/wisata/wisata-taman-mini.jpeg">
+      </div>
       <div class="cont-items">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
           <p>Small title</p>
         </div>
-        
-        <img src="../src/gambar/jakarta/wisata/wisata-dufan.png"</img>
+        <img src="../src/gambar/jakarta/wisata/wisata-dufan.png">
       </div>
       <div class="cont-items">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
@@ -136,10 +136,6 @@
       <div class="cont-items">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
           <p>Small title</p>
-        </div>
-        <div class="icon-desc">
-          <p>
-          </p>
         </div>
         <img src="../src/gambar/jakarta/wisata/wisata-monas.jpg">
       </div>
@@ -208,6 +204,7 @@
     </div>
   </div>
     </section>
+    </div> 
     <footer class="footer">
       <div class="row mt-6 d-flex flex-md-row flex-column justify-content-center align-items-center text-center pt-6 pb-6 mx-auto">
         <div class="col-md-6 text-center mb-3 mb-md-0">
@@ -220,8 +217,6 @@
         </div>
       </div>
     </footer>
-
-</div> 
 
 <script src="parallax.js"></script>
 
