--- a/coba2niko/parallax.html
+++ b/coba2niko/parallax.html
@@ -114,7 +114,7 @@
     <div class="container-wisata">
       <div class="cont-items">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Small title</p>
+          <p>Small title</p><br><br><br><br><br>
           <div class="centerForm">
             <p contenteditable="true">This is an editable paragraph. Normally I have a border around me on focus, but not today!</p>
           </div>
@@ -205,15 +205,17 @@
   </div>
     </section>
     </div> 
-    <footer class="footer">
-      <div class="row mt-6 d-flex flex-md-row flex-column justify-content-center align-items-center text-center pt-6 pb-6 mx-auto">
-        <div class="col-md-6 text-center mb-3 mb-md-0">
-          <h5 class="fw-bold">Indonesia Travel Guide Map</h5>
-          <p>Created by Group 9</p>
-          <p>&copy; 2023</p>
+    <footer>
+      <div class="footer">
+        <div class="row mt-6 d-flex flex-md-row flex-column justify-content-center align-items-center text-center pt-6 pb-6 mx-auto">
+          <div class="col-md-6 text-center mb-3 mb-md-0">
+           <h5 class="fw-bold">Indonesia Travel Guide Map</h5>
+           <p>Created by Group 9</p>
+           <p>&copy; 2023</p>
         </div>
-        <div class="col-md-6 d-flex justify-content-center">
+          <div class="col-md-6 d-flex justify-content-center">
           <a href="https://www.umn.ac.id/?gclid=Cj0KCQjwz6ShBhCMARIsAH9A0qVQt97EhNy_s9RZUcjBO5DhdSBqRIu4afR-F624j4SQ2hUJ7KnAqnQaAhKlEALw_wcB"><img src="../about/images/logo-akreditasi.png" class="img-fluid"></a>
+          </div>
         </div>
       </div>
     </footer>
