--- a/coba2niko/parallax.html
+++ b/coba2niko/parallax.html
@@ -53,7 +53,7 @@
                 </div>
                   <div class="col-md-7 mt-3 desc-provinsi">
                     <h3>Fun Fact:</h3>
-                    <p>Jakarta (pengucapan bahasa Indonesia: [dʒaˈkarta] ( simak)), atau secara resmi bernama asdfjlksajdfihblkansdofuhasldmfnk asdbpihjopfnbknsadifbpjoapdsf oiansdoifj adsofnoiblvaosdf </p>
+                    <p>Jakarta mengalami pergantian nama sebanyak 10 kali. Nama Jakarta sendiri baru digunakan saat pendudukan Jepang dengan nama Djakarta Tokubetsu Shi.</p>
                   </div>
             </div>       
           </div>
@@ -114,36 +114,43 @@
     <div class="container-wisata">
       <div class="cont-items">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Small title</p>
+          <p>TMII</p>
         </div>
         <div class="centerForm">
-          <p >This is an editable paragraph. Normally I have a border around me on focus, but not today!</p>
+          <p >Taman Mini Indonesia Indah (TMII) merupakan suatu kawasan taman wisata bertema budaya Indonesia di Jakarta Timur.Tujuan dibangunnya tempat wisata ini adalah untuk memperkenalkan kebudayaan dan kekayaan alam kepada setiap warga Indonesia maupun luar negeri. Taman ini memiliki berbagai wahana seperti anjungan daerah, teater 4D, museum, dan lain-lain.</p>
         </div>
-        <!-- <img src="../src/gambar/jakarta/wisata/wisata-taman-mini.jpeg"> -->
       </div>
-      <div class="cont-items">
+      <div class="cont-items1">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Small title</p>
+          <p>Dufan</p>
         </div>
-        <img src="../src/gambar/jakarta/wisata/wisata-dufan.png">
+        <div class="centerForm">
+          <p >Dufan adalah sebuah taman hiburan yang terletak di kawasan Taman Impian Ancol, Jakarta Utara, Indonesia yang diresmikan dan dibuka untuk umum pada tanggal 29 Agustus 1985. Dufan menawarkan banyak wahana mulai dari roller coaster, Ferris Wheel, taman hiburan bertema internasional, dan lain-lain.</p>
+        </div>
       </div>
-      <div class="cont-items">
+      <div class="cont-items2">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Small title</p>
+          <p>PIK</p>
         </div>
-        <img src="../src/gambar/jakarta/wisata/wisata-pik.jpg">
+        <div class="centerForm">
+          <p >Pantai Indah Kapuk (PIK) adalah sebuah kawasan terencana yang terletak di Penjaringan, Jakarta Utara, Kapuk, Cengkareng, Jakarta Barat, dan Kabupaten Tangerang, Banten. Kawasan PIK dibagi menjadi dua kawasan utama: Pantai Indah Kapuk 1 dan Pantai Indah Kapuk 2.</p>
+        </div>
       </div>
-      <div class="cont-items">
+      <div class="cont-items3">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Small title</p>
+          <p>Monas</p>
         </div>
-        <img src="../src/gambar/jakarta/wisata/wisata-monas.jpg">
+        <div class="centerForm">
+          <p>Monas adalah monumen yang berada di tengah Lapangan Medan Merdeka di Jakarta Pusat. Monas didirikan untuk merayakan perjuangan rakyat Indonesia. </p>
+        </div>
       </div>
-      <div class="cont-items">
+      <div class="cont-items4">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Small title</p>
+          <p>Kota Tua</p>
         </div>
-        <img src="../src/gambar/jakarta/wisata/wisata-kota-tua.jpg">
+        <div class="centerForm">
+          <p>Wisata Kota Tua Jakarta yang juga dikenal dengan sebutan Batavia Lama (Oud Batavia) ini adalah sebuah wilayah kecil di Jakarta, Indonesia dan dijuluki dengan "Permata Asia" dan "Ratu dari Timur" pada abad ke-16 oleh pelayar Eropa.Di kawasan ini terdapat ragam bangunan tua yang masih terawat yang masing-masing memiliki sejarah.</p>
+        </div>
       </div>
     </div>
     <div class="bg"></div>
@@ -163,9 +170,9 @@
           <div class="blog-slider__img1">
           </div>
           <div class="blog-slider__content">
-            <span class="blog-slider__code">26 December 2019</span>
-            <div class="blog-slider__title">Lorem Ipsum Dolor</div>
-            <div class="blog-slider__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate repellendus magni illo ea animi? </div>
+            <span class="blog-slider__code">Top 1</span>
+            <div class="blog-slider__title">Gabus Pucung</div>
+            <div class="blog-slider__text">Gabus pucung yang merupakan makanan khas daerah Bekasi dan Betawi. Gabus pucung terbuat dari olahan dari ikan gabus yang terkenal punya daging tebal dan gurih, kemudian dimasak dengan aneka bumbu-bumbu dan menggunakan kluwek.</div>
           </div>
         </div>
       </div>
@@ -179,9 +186,9 @@
             <img src="" alt="">
           </div>
           <div class="blog-slider__content">
-            <span class="blog-slider__code">26 December 2019</span>
-            <div class="blog-slider__title">Lorem Ipsum Dolor</div>
-            <div class="blog-slider__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate repellendus magni illo ea animi? </div>
+            <span class="blog-slider__code">Top 2</span>
+            <div class="blog-slider__title">Kerak Telor</div>
+            <div class="blog-slider__text">Kerak Telor merupakan makanan khas Betawi yang terbuat dari bahan dasar beras ketan putih, telur ayam dan ebi. Kuliner asli Betawi ini kerap muncul saat perayaan besar yang ada di Ibukota, salah satunya pada saat HUT Kota Jakarta.</div>
           </div>
         </div>
       </div>
@@ -195,9 +202,9 @@
             <img src="" alt="">
           </div>
           <div class="blog-slider__content">
-            <span class="blog-slider__code">26 December 2019</span>
-            <div class="blog-slider__title">Lorem Ipsum Dolor</div>
-            <div class="blog-slider__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate repellendus magni illo ea animi? </div>
+            <span class="blog-slider__code">Top 3</span>
+            <div class="blog-slider__title">Soto Betawi</div>
+            <div class="blog-slider__text">Soto betawi berisi daging dan jeroan sapi seperti babat dan paru. Untuk bumbunya sendiri, soto betawi dilengkapi dengan cengkih, kayu manis, pala, dan serai. Soto betawi memiliki kuah yang berwarna putih kental karena memakai susu atau santan.</div>
           </div>
         </div>
       </div>
