--- a/Kota/Jakarta/Jakarta.html
+++ b/Kota/Jakarta/Jakarta.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="row justify-content-center">
                 <div class=" col-md-4 img-prov justify-content-center">
-                  <img src="../src/gambar/jakarta/jakarta.jpg" alt="jakarta">
+                  <img src="./jakarta-img/jakarta.jpg" alt="jakarta">
                 </div>
                   <div class="col-md-7 mt-3 desc-provinsi">
                     <h3>Fun Fact:</h3>
@@ -60,46 +60,46 @@
           <div class="slider">
             <div class="slide-track">
               <div class="slide">
-                <img src="../src/gambar/jakarta/jakarta-car1.jpg" height="170" width="270" alt="" />
+                <img src="./jakarta-img/jakarta-car1.jpg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="../src/gambar/jakarta/jakarta-car2.jpg" height="170" width="270" alt="" />
+                <img src="./jakarta-img/jakarta-car2.jpg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="../src/gambar/jakarta/jakarta-car3.jpg" height="170" width="270" alt="" />
+                <img src="./jakarta-img/jakarta-car3.jpg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="../src/gambar/jakarta/jakarta-car4.jpg" height="170" width="270" alt="" />
+                <img src="./jakarta-img/jakarta-car4.jpg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="../src/gambar/jakarta/jakarta-car5.jpg" height="170" width="270" alt="" />
+                <img src="./jakarta-img/jakarta-car5.jpg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="../src/gambar/jakarta/jakarta-car6.jpg" height="170" width="270" alt="" />
+                <img src="./jakarta-img/jakarta-car6.jpg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="../src/gambar/jakarta/jakarta-car7.jpg" height="170" width="270" alt="" />
+                <img src="./jakarta-img/jakarta-car7.jpg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="../src/gambar/jakarta/jakarta-car1.jpg" height="170" width="270" alt="" />
+                <img src="./jakarta-img/jakarta-car1.jpg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="../src/gambar/jakarta/jakarta-car2.jpg" height="170" width="270" alt="" />
+                <img src="./jakarta-img/jakarta-car2.jpg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="../src/gambar/jakarta/jakarta-car3.jpg" height="170" width="270" alt="" />
+                <img src="./jakarta-img/jakarta-car3.jpg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="../src/gambar/jakarta/jakarta-car4.jpg" height="170" width="270" alt="" />
+                <img src="./jakarta-img/jakarta-car4.jpg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="../src/gambar/jakarta/jakarta-car5.jpg" height="170" width="270" alt="" />
+                <img src="./jakarta-img/jakarta-car5.jpg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="../src/gambar/jakarta/jakarta-car6.jpg" height="170" width="270" alt="" />
+                <img src="./jakarta-img/jakarta-car6.jpg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="../src/gambar/jakarta/jakarta-car7.jpg" height="170" width="270" alt="" />
+                <img src="./jakarta-img/jakarta-car7.jpg" height="170" width="270" alt="" />
               </div>
             </div>
           </div>
