--- a/Kota/Jakarta/Jakarta.html
+++ b/Kota/Jakarta/Jakarta.html
@@ -221,7 +221,7 @@
            <p>&copy; 2023</p>
         </div>
           <div class="col-md-6 d-flex justify-content-center">
-          <a href="https://www.umn.ac.id/?gclid=Cj0KCQjwz6ShBhCMARIsAH9A0qVQt97EhNy_s9RZUcjBO5DhdSBqRIu4afR-F624j4SQ2hUJ7KnAqnQaAhKlEALw_wcB"><img src="../about/images/logo-akreditasi.png" class="img-fluid"></a>
+          <a href="https://www.umn.ac.id/?gclid=Cj0KCQjwz6ShBhCMARIsAH9A0qVQt97EhNy_s9RZUcjBO5DhdSBqRIu4afR-F624j4SQ2hUJ7KnAqnQaAhKlEALw_wcB"><img src="./jakarta-img/logo-akreditasi.png" class="img-fluid"></a>
           </div>
         </div>
       </div>
