--- a/Homescreen/homescreen.html
+++ b/Homescreen/homescreen.html
@@ -126,7 +126,7 @@
         <div class="tooltip-content">
           <p>Jakarta adalah ibu kota dan kota terbesar di Indonesia. Terletak di Pulau Jawa, Jakarta adalah pusat politik, ekonomi, dan budaya negara ini. Kota ini menawarkan berbagai atraksi, seperti Monumen Nasional (Monas), Taman Mini Indonesia Indah, dan Ancol Dreamland. Selain itu, Jakarta juga memiliki pusat perbelanjaan yang terkenal, seperti Plaza Indonesia dan Grand Indonesia. Dengan kehidupan malam yang beragam, kuliner lezat, dan keramahan penduduknya, Jakarta adalah tempat yang menarik untuk dijelajahi dan dinikmati.</p>
           </div>
-        <br/><a href="https://www.google.com">See More...</a>
+        <br/><a href="../Kota/Jakarta/Jakarta.html">See More...</a>
       `;
       detailsBox.style.display = "block";
 
