--- a/loadingscreen.html
+++ b/loadingscreen.html
@@ -62,7 +62,7 @@
     
     setTimeout(function() {
       document.querySelector('.loading-screen').classList.remove('active');
-      window.location.href = "homescreen.html"; // Ganti dengan URL atau path halaman tujuan
+      window.location.href = "./Homescreen/homescreen.html"; // Ganti dengan URL atau path halaman tujuan
     }, 3000); // Ubah delay sesuai kebutuhan Anda
   </script>
 </body>
