--- a/Homescreen/homescreen.html
+++ b/Homescreen/homescreen.html
@@ -141,7 +141,7 @@
         <div class="tooltip-content">
           <p>Denpasar adalah ibu kota Provinsi Bali, Indonesia. Terletak di pantai selatan Pulau Bali, kota ini merupakan pusat administrasi, perdagangan, dan budaya Bali. Jelajahi Pura Jagatnatha, Pasar Badung, dan museum-museum yang menampilkan seni dan budaya Bali. Nikmati pesona budaya Bali dan suasana pantai yang indah di Denpasar.</p>
         </div>
-        <br/><a href="https://www.google.com">See More...</a>
+        <br/><a href="../Kota/Denpasar/Denpasar.html">See More...</a>
       `;
       detailsBox.style.display = "block";
 
