--- a/Kota/Denpasar/Denpasar.html
+++ b/Kota/Denpasar/Denpasar.html
@@ -110,42 +110,42 @@
     <div class="container-wisata">
       <div class="cont-items">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>TMII</p>
+          <p>Bajra Sandhi</p>
         </div>
         <div class="centerForm">
-          <p >Taman Mini Indonesia Indah (TMII) merupakan suatu kawasan taman wisata bertema budaya Indonesia di Jakarta Timur.Tujuan dibangunnya tempat wisata ini adalah untuk memperkenalkan kebudayaan dan kekayaan alam kepada setiap warga Indonesia maupun luar negeri. Taman ini memiliki berbagai wahana seperti anjungan daerah, teater 4D, museum, dan lain-lain.</p>
+          <p >Monumen Bajra Sandhi merupakan Monumen Perjuangan Rakyat Bali untuk memberi hormat pada para pahlawan serta merupakan lambang pesemaian pelestarian jiwa perjuangan rakyat Bali dari generasi ke generasi dan dari zaman ke zaman serta lambang semangat untuk mempertahankan keutuhan Negara Kesatuan Republik Indonesia. Monumen ini dikenal dengan nama "Bajra Sandhi" karena bentuknya menyerupai bajra atau genta yang digunakan oleh para Pendeta Hindu dalam mengucapkan Weda (mantra) pada saat upacara keagamaan.</p>
         </div>
       </div>
       <div class="cont-items1">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Dufan</p>
+          <p>Museum Bali</p>
         </div>
         <div class="centerForm">
-          <p >Dufan adalah sebuah taman hiburan yang terletak di kawasan Taman Impian Ancol, Jakarta Utara, Indonesia yang diresmikan dan dibuka untuk umum pada tanggal 29 Agustus 1985. Dufan menawarkan banyak wahana mulai dari roller coaster, Ferris Wheel, taman hiburan bertema internasional, dan lain-lain.</p>
+          <p >Museum Bali (dikenal juga sebagai Museum Unit Pelaksana Teknis Dinas Kebudayaan Bali) adalah museum negara yang berada di Kota Denpasar, Bali. Museum Bali menjadi museum penyimpanan peninggalan masa lampau manusia dan etnografi. Koleksi museum terdiri dari benda-benda etnografi antara lain peralatan dan perlengkapan hidup, kesenian, keagamaan, bahasa tulisan, dan lainnya yang mencerminkan kehidupan dan perkembangan kebudayaan Bali di masa lampau.</p>
         </div>
       </div>
       <div class="cont-items2">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>PIK</p>
+          <p>Pantai Sanur</p>
         </div>
         <div class="centerForm">
-          <p >Pantai Indah Kapuk (PIK) adalah sebuah kawasan terencana yang terletak di Penjaringan, Jakarta Utara, Kapuk, Cengkareng, Jakarta Barat, dan Kabupaten Tangerang, Banten. Kawasan PIK dibagi menjadi dua kawasan utama: Pantai Indah Kapuk 1 dan Pantai Indah Kapuk 2.</p>
+          <p >Pantai Sanur adalah salah satu pantai wisata yang ada di pulau Bali. Pantai ini terletak persis di sebelah timur kota Denpasar, Bali. Sanur berada di Kotamadya Denpasar. Karena memiliki ombak yang cukup tenang, maka pantai Sanur tidak bisa dipakai untuk selancar layaknya Pantai Kuta. Tak jauh dari Pantai Sanur terdapat juga lokasi wisata selam dan snorkeling. Lokasi selam ini dapat digunakan oleh para penyelam dari semua tingkatan keahlian. Pantai Sanur juga dikenal sebagai sunrise beach, berlawanan dengan Pantai Kuta yang lebih dikenal dengan pemandangan sunset.</p>
         </div>
       </div>
       <div class="cont-items3">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Monas</p>
+          <p>Tanah Lot</p>
         </div>
         <div class="centerForm">
-          <p>Monas adalah monumen yang berada di tengah Lapangan Medan Merdeka di Jakarta Pusat. Monas didirikan untuk merayakan perjuangan rakyat Indonesia. </p>
+          <p>Pura Tanah Lot adalah salah satu Pura yang sangat disucikan di Bali, Indonesia. Di sini ada 2 Pura yang terletak di atas batu besar. Satu terletak di atas bongkahan batu dan satunya di atas tebing mirip dengan Pura Uluwatu. Pura Tanah Lot ini merupakan bagian dari Pura Dang Kahyangan. Pura Tanah Lot merupakan Pura laut tempat pemujaan dewa-dewa penjaga laut. Tanah Lot terkenal sebagai tempat yang indah untuk melihat matahari terbenam.</p>
         </div>
       </div>
       <div class="cont-items4">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Kota Tua</p>
+          <p>GWK</p>
         </div>
         <div class="centerForm">
-          <p>Wisata Kota Tua Jakarta yang juga dikenal dengan sebutan Batavia Lama (Oud Batavia) ini adalah sebuah wilayah kecil di Jakarta, Indonesia dan dijuluki dengan "Permata Asia" dan "Ratu dari Timur" pada abad ke-16 oleh pelayar Eropa.Di kawasan ini terdapat ragam bangunan tua yang masih terawat yang masing-masing memiliki sejarah.</p>
+          <p>Garuda Wisnu Kencana kerap disebut dengan GWK, adalah sebuah taman wisata budaya di bagian selatan pulau Bali. Taman wisata ini terletak di Desa Ungasan, Kecamatan Kuta Selatan, Kabupaten Badung, kira-kira 40 kilometer di sebelah selatan Denpasar, ibu kota provinsi Bali.Di sini berdiri megah sebuah landmark atau maskot Bali, yakni patung Garuda Wisnu Kencana yang menggambarkan sosok Dewa Wisnu menunggangi tunggangannya, Garuda, setinggi 121 meter.</p>
         </div>
       </div>
     </div>
