--- a/Homescreen/homescreen.html
+++ b/Homescreen/homescreen.html
@@ -17,16 +17,16 @@
       <div class="image-container">
         <img src="../img/Indo_map.png" alt="Image" class="map"/>
 
-        <div class="point" style="left: 12.1641%; top: 40.9815%;" onclick="Padang('Padang')"></div>
-        <div class="point" style="left: 8.01562%; top: 19.212%;" onclick="Medan('Medan')"></div>
-        <div class="point" style="left: 31.7109%; top: 37.9133%;" onclick="Pontianak('Pontianak')"></div>
-        <div class="point" style="left: 48.375%; top: 40.5432%;" onclick="Samarinda('Samarinda')"></div>
-        <div class="point" style="left: 53.0156%; top: 61.1438%;" onclick="Makassar('Makassar')"></div>
-        <div class="point" style="left: 64.1953%; top: 30.7542%;" onclick="Manado('Manado')"></div>
-        <div class="point" style="left: 26.0859%; top: 66.988%;" onclick="Jakarta('Jakarta')"></div>
-        <div class="point" style="left: 43.8047%; top: 77.9458%;" onclick="Denpasar('Denpasar')"></div>
-        <div class="point" style="left: 97.8047%; top: 49.6016%;" onclick="Jayapura('Jayapura')"></div>
-        <div class="point" style="left: 78.3281%; top: 41.4198%;" onclick="Sorong('Sorong')"></div>
+        <div class="point" style="left: 12.1641%; top: 40.9815%;" onclick="Padang('Padang')"></div><p class="point-name" style="left: 12.1641%; top: 40.9815%;">Padang</p>
+        <div class="point" style="left: 8.01562%; top: 19.212%;" onclick="Medan('Medan')"></div><p class="point-name" style="left: 8.01562%; top: 19.212%;">Medan</p>
+        <div class="point" style="left: 31.7109%; top: 37.9133%;" onclick="Pontianak('Pontianak')"></div><p class="point-name" style="left: 31.7109%; top: 37.9133%;">Pontianak</p>
+        <div class="point" style="left: 48.375%; top: 40.5432%;" onclick="Samarinda('Samarinda')"></div><p class="point-name" style="left: 48.375%; top: 40.5432%;">Samarinda</p>
+        <div class="point" style="left: 53.0156%; top: 61.1438%;" onclick="Makassar('Makassar')"></div><p class="point-name" style="left: 53.0156%; top: 61.1438%;">Makassar</p>
+        <div class="point" style="left: 64.1953%; top: 30.7542%;" onclick="Manado('Manado')"></div><p class="point-name" style="left: 64.1953%; top: 30.7542%;">Manado</p>
+        <div class="point" style="left: 26.0859%; top: 66.988%;" onclick="Jakarta('Jakarta')"></div><p class="point-name" style="left: 26.0859%; top: 66.988%;">Jakarta</p>
+        <div class="point" style="left: 43.8047%; top: 77.9458%;" onclick="Denpasar('Denpasar')"></div><p class="point-name" style="left: 43.8047%; top: 77.9458%;">Denpasar</p>
+        <div class="point" style="left: 97.8047%; top: 49.6016%;" onclick="Jayapura('Jayapura')"></div><p class="point-name" style="left: 93.8047%; top: 49.6016%;">Jayapura</p>
+        <div class="point" style="left: 78.3281%; top: 41.4198%;" onclick="Sorong('Sorong')"></div><p class="point-name"  style="left: 78.3281%; top: 41.4198%;">Sorong</p>
       </div>
       <div class="hover-box" id="detailsBox"></div>
     </div>
