--- a/Kota/Padang/Padang.html
+++ b/Kota/Padang/Padang.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mockup Wisata</title>
-    <link rel="stylesheet" href="medan.css">
+    <link rel="stylesheet" href="padang.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   </head>
   <body>
@@ -39,63 +39,63 @@
                 <div class="col-sm-12 justify-content-center css-jakarta">       
                   <div class="content-box">
                     <div class="kota">
-                        <h1>MEDAN</h1>
+                        <h1>PADANG</h1>
                     </div>
                 </div>
                 </div>
                 <div class="row justify-content-center">
                 <div class=" col-md-4 img-prov justify-content-center">
-                  <img src="./medan-img/medan.png" alt="jakarta">
+                  <img src="./padang-img/Padang.jpg" alt="jakarta">
                 </div>
                   <div class="col-md-7 mt-3 desc-provinsi">
                     <h3>Fun Fact:</h3>
-                    <p>Lewat branding "The Kitchen of Asia," Kota Medan siap berbenah diri untuk jadi destinasi wisata kuliner kenamaan. Ini diungkapkan Wali Kota Medan, Bobby Nasution, yang mengatakan bahwa kuliner merupakan jawaban dari semua permasalahan di Kota Medan.</p>
+                    <p>Rumah makan Padang yang sering ditemui di berbagai penjuru daerah, justru tak bisa ditemukan di Padang. Hanya ada tiga jenis rumah makan di Padang yang menjual beberapa menu serupa, yaitu rumah makan ampera, kapau, dan restoran biasa. Ketiga rumah makan tersebut memiliki ciri khas, yakni dalam segi harga, cara penyajiannya, penataan lauknya, dan lain sebagainya.</p>
                   </div>
             </div>       
           </div>
           <div class="slider">
             <div class="slide-track">
               <div class="slide">
-                <img src="./medan-img/medan-car1.jpg" height="170" width="270" alt="" />
+                <img src="./padang-img/padang-car1.jpg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="./medan-img/medan-car2.jpeg" height="170" width="270" alt="" />
+                <img src="./padang-img/padang-car2.jpg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="./medan-img/medan-car3.jpg" height="170" width="270" alt="" />
+                <img src="./padang-img/padang-car-3.jpeg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="./medan-img/medan-car4.jpg" height="170" width="270" alt="" />
+                <img src="./padang-img/padang-car4.webp" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="./medan-img/medan-car5.jpg" height="170" width="270" alt="" />
+                <img src="./padang-img/padang-car-5.jpeg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="./medan-img/medan-car6.jpg" height="170" width="270" alt="" />
+                <img src="./padang-img/padang-car6.webp" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="./medan-img/medan-car7.webp" height="170" width="270" alt="" />
+                <img src="./padang-img/padang-car7.webp" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="./medan-img/medan-car1.jpg" height="170" width="270" alt="" />
+                <img src="./padang-img/padang-car1.jpg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="./medan-img/medan-car2.jpeg" height="170" width="270" alt="" />
+                <img src="./padang-img/padang-car2.jpg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="./medan-img/medan-car3.jpg" height="170" width="270" alt="" />
+                <img src="./padang-img/padang-car-3.jpeg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="./medan-img/medan-car4.jpg" height="170" width="270" alt="" />
+                <img src="./padang-img/padang-car4.webp" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="./medan-img/medan-car5.jpg" height="170" width="270" alt="" />
+                <img src="./padang-img/padang-car-5.jpeg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="./medan-img/medan-car6.jpg" height="170" width="270" alt="" />
+                <img src="./padang-img/padang-car6.webp" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="./medan-img/medan-car7.webp" height="170" width="270" alt="" />
+                <img src="./padang-img/padang-car7.webp" height="170" width="270" alt="" />
               </div>
             </div>
           </div>
@@ -110,42 +110,42 @@
     <div class="container-wisata">
       <div class="cont-items">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Holbung</p>
+          <p>Museum</p>
         </div>
         <div class="centerForm">
-          <p >Bukit Holbung adalah salah satu tempat wisata di Danau Toba yang terletak perbukitan di Desa Holbung, Kecamatan Sitiotio, Kabupaten Samosir, Sumatra Utara. Rangkaian perbukitan Bukit Holbung ini sudah ada sejak 200 tahun yang lalu.</p>
+          <p >Museum Adityawarman adalah museum budaya yang terletak di Kota Padang, Sumatra Barat. Didirikan pada tahun 1977 dan dinamai setelah raja Malayapura, Adityawarman, pada abad ke-14. Berfungsi sebagai tempat untuk menyimpan dan melestarikan benda-benda bersejarah, terutama cagar budaya Minangkabau dan sekitarnya, termasuk bangunan berarsitektur tradisional Minang. Museum ini sering disebut sebagai "Taman Mini ala Sumatra Barat" karena koleksinya yang luas dan beragam mengenai kebudayaan dan sejarah daerah tersebut. Museum ini merupakan salah satu tujuan wisata budaya yang penting di Kota Padang.</p>
         </div>
       </div>
       <div class="cont-items1">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Danau Toba</p>
+          <p>Sirasah</p>
         </div>
         <div class="centerForm">
-          <p >Danau Toba adalah danau alami berukuran besar di Indonesia yang berada di kaldera gunung supervulkan. Danau ini memiliki panjang 100 kilometer (62 mil), lebar 30 kilometer (19 mi), dan kedalaman 508 meter (1.667 ft). Danau ini terletak di tengah pulau Sumatra bagian utara dengan ketinggian permukaan sekitar 900 meter (2.953 ft). Danau ini adalah danau terbesar di Indonesia sekaligus danau vulkanik terbesar di dunia.</p>
+          <p >Air Terjun Sarasah adalah sebuah air terjun yang terletak di daerah Sumatra Barat, Indonesia. Air terjun ini memiliki keindahan alam yang memukau dengan air yang mengalir dari ketinggian dan jatuh ke kolam di bawahnya. Air Terjun Sarasah dikelilingi oleh hutan yang hijau dan pemandangan yang indah. Tempat ini sering menjadi tujuan wisata bagi pengunjung yang ingin menikmati keindahan alam dan menyegarkan diri dengan air terjun yang segar.</p>
         </div>
       </div>
       <div class="cont-items2">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Maimun</p>
+          <p>Kota Tua</p>
         </div>
         <div class="centerForm">
-          <p >Istana Maimun adalah ikon Kota Medan, Sumatra Utara, sebagai istana Kesultanan Deli. Didesain oleh arsitek Capt. Theodoor van Erp, istana ini memiliki 2 lantai, 30 ruangan, dan gaya arsitektur yang memadukan berbagai budaya. Terletak di Jalan Brigadir Jenderal Katamso, Aur, Medan Maimun, istana ini juga dikenal dengan sebutan Masjid Raya Medan.</p>
+          <p >Kota Tua Padang, juga dikenal sebagai Padang Lama, adalah kawasan di sepanjang Sungai Batang Arau yang merupakan pusat peradaban awal di Kota Padang. Kawasan ini mencakup sebagian wilayah dua kecamatan, yaitu Padang Barat dan Padang Selatan. Sejarahnya sebagai pusat perdagangan yang ramai melalui Pelabuhan Muara. Kota Tua Padang memiliki nilai sejarah dan cagar budaya yang signifikan, dengan bangunan-bangunan tua yang masih tersisa hingga saat ini. Tempat ini sering dikunjungi oleh wisatawan dan menjadi saksi bisu perkembangan Kota Padang dari masa lampau.</p>
         </div>
       </div>
       <div class="cont-items3">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Bah Damanik</p>
+          <p>Pantai</p>
         </div>
         <div class="centerForm">
-          <p>Pemandian Bah Damanik adalah pemandian air panas di desa Damanik, Sumatra Utara. Terkenal sebagai tempat rekreasi dan penyembuhan alami dengan air panas belerang. Menyediakan fasilitas kolam renang dan kamar mandi.</p>
+          <p>Pantai Air Manis, terletak 10 km di selatan Kota Padang, merupakan destinasi wisata populer. Pantai ini memiliki ombak kecil, panorama indah, dan terdapat dua pulau kecil di dekatnya. Pantai Air Manis juga terkenal dengan legenda Malin Kundang.</p>
         </div>
       </div>
       <div class="cont-items4">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Ucok Durian</p>
+          <p>Pulau</p>
         </div>
         <div class="centerForm">
-          <p>Ucok Durian memang hanya salah satu dari banyak penjual durian di Kota Medan, tapi saking terkenal dan legendarisnya tempat ini, sudah bisa disebut sebagai salah satu tempat wisata di Medan. Soalnya, ini memang jadi salah satu tempat yang wajib banget dikunjungi saat liburan ke Medan. Saking terkenalnya tempat ini, Presiden Joko Widodo aja sampai datang ke sini tahun 2017 lalu.</p>
+          <p>Pulau Sirandah adalah sebuah pulau kecil yang terletak di perairan Sumatra Barat, Indonesia. Pulau ini terletak di Teluk Padang, dekat dengan pantai Padang. Pulau Sirandah dikenal karena keindahan alamnya, termasuk pasir putihnya, air laut yang jernih, serta terumbu karang yang indah. Pulau ini sering dikunjungi oleh para wisatawan untuk snorkeling, menyelam, atau sekadar menikmati pemandangan alam yang menakjubkan.</p>
         </div>
       </div>
     </div>
@@ -167,8 +167,8 @@
           </div>
           <div class="blog-slider__content">
             <span class="blog-slider__code">Top 1</span>
-            <div class="blog-slider__title">Mie Gomak</div>
-            <div class="blog-slider__text">Mi gomak adalah masakan khas suku Batak Toba dari Sumatra Utara, terutama daerah sekitar Danau Toba. Mi ini juga populer di berbagai daerah di Sumatra Utara dan provinsi lain di Indonesia. Dapat ditemukan di berbagai daerah di Sumatra Utara, mulai dari Medan, Siantar, Parapat, Labuhan Batu, Sibolga, hingga Deli Serdang.</div>
+            <div class="blog-slider__title">Rendang</div>
+            <div class="blog-slider__text">Rendang adalah hidangan khas dari daerah Padang, Sumatra Barat. Daging dimasak dalam rempah-rempah dengan santan hingga kuah meresap dan daging menjadi empuk. Rendang terkenal sebagai salah satu hidangan daging terlezat di dunia.</div>
           </div>
         </div>
       </div>
@@ -183,8 +183,8 @@
           </div>
           <div class="blog-slider__content">
             <span class="blog-slider__code">Top 2</span>
-            <div class="blog-slider__title">Lontong Medan</div>
-            <div class="blog-slider__text">Lontong Medan adalah hidangan khas Kota Medan, Sumatra Utara. Terdiri dari lontong dengan kuah santan kental dan berbagai pelengkap seperti telur, tahu, kerupuk, dan sambal. Biasa disajikan sebagai sarapan pagi yang lezat dan mengenyangkan.</div>
+            <div class="blog-slider__title">Sate Danguang</div>
+            <div class="blog-slider__text">Sate Danguang-Danguang adalah hidangan khas Minangkabau dari Danguang-danguang, Lima Puluh Kota. Memiliki kesamaan dengan sate Padang karena menggunakan daging sapi, tetapi memiliki bumbu yang berbeda. Kuahnya lebih segar dengan warna kuning, berbeda dengan sate Padang yang lebih pedas dan tajam.</div>
           </div>
         </div>
       </div>
@@ -199,8 +199,8 @@
           </div>
           <div class="blog-slider__content">
             <span class="blog-slider__code">Top 3</span>
-            <div class="blog-slider__title">Soto Medan</div>
-            <div class="blog-slider__text">Soto Medan adalah masakan khas Sumatra Utara dengan kuah kuning kental berbahan dasar santan dan rempah-rempah. Di dalamnya terdapat daging ayam atau sapi. Salah satu tempat terkenal untuk menikmati Soto Medan adalah RM Sinar Pagi di Kota Medan.</div>
+            <div class="blog-slider__title">Bika Talago</div>
+            <div class="blog-slider__text">Bika Talago adalah kue tradisional khas Kota Padang, Sumatra Barat. Terbuat dari adonan tepung terigu, gula, santan, dan telur yang dipanggang hingga lembut dan berlapis-lapis. Biasanya dihiasi dengan taburan wijen atau kacang almond. Populer sebagai oleh-oleh khas dari daerah tersebut.</div>
           </div>
         </div>
       </div>
@@ -217,7 +217,7 @@
            <p>&copy; 2023</p>
         </div>
           <div class="col-md-6 d-flex justify-content-center">
-          <a href="https://www.umn.ac.id/?gclid=Cj0KCQjwz6ShBhCMARIsAH9A0qVQt97EhNy_s9RZUcjBO5DhdSBqRIu4afR-F624j4SQ2hUJ7KnAqnQaAhKlEALw_wcB"><img src="./medan-img/logo-akreditasi.png" class="img-fluid"></a>
+          <a href="https://www.umn.ac.id/?gclid=Cj0KCQjwz6ShBhCMARIsAH9A0qVQt97EhNy_s9RZUcjBO5DhdSBqRIu4afR-F624j4SQ2hUJ7KnAqnQaAhKlEALw_wcB"><img src="./padang-img/logo-akreditasi.png" class="img-fluid"></a>
           </div>
         </div>
       </div>
