--- a/Homescreen/homescreen.html
+++ b/Homescreen/homescreen.html
@@ -42,7 +42,7 @@
         <div class="tooltip-content">
           <p>Padang adalah kota di Provinsi Sumatera Barat, Indonesia. Terkenal dengan keindahan alamnya dan masakan Padang yang lezat, Padang menawarkan pengalaman wisata yang menarik. Anda dapat menikmati pantai-pantai yang indah seperti Pantai Air Manis dan Pantai Padang Padang, serta menjelajahi warisan budaya Minangkabau seperti Istana Pagaruyung. Jelajahi kota ini dan nikmati keindahan alam serta kuliner yang khas.</p>
         </div>
-        <br/><br/><a href="https://www.google.com">See More...</a>
+        <br/><br/><a href="../Kota/Padang/Padang.html">See More...</a>
       `;
       detailsBox.style.display = "block";
 
@@ -56,7 +56,7 @@
         <div class="tooltip-content">
           <p>Medan, terletak di Sumatera Utara, adalah kota terbesar di Pulau Sumatera, Indonesia. Dikenal sebagai "Kota Melayu Deli," Medan memiliki sejarah yang kaya dan budaya yang beragam. Kota ini memiliki pesona yang unik dengan gabungan kekayaan warisan budaya Melayu, Tionghoa, dan Eropa. Medan juga menjadi gerbang utama untuk menjelajahi keindahan alam Sumatera Utara, termasuk Danau Toba yang terkenal. Dengan berbagai atraksi wisata, kuliner yang lezat, dan keramahan penduduknya, Medan adalah tempat yang menarik untuk dijelajahi dan dinikmati.</p>
         </div>
-        <br/><a href="https://www.google.com">See More...</a>
+        <br/><a href="../Kota/Medan/Medan.html">See More...</a>
       `;
       detailsBox.style.display = "block";
 
