--- a/Homescreen/homescreen.html
+++ b/Homescreen/homescreen.html
@@ -70,7 +70,7 @@
         <div class="tooltip-content">
           <p>Pontianak, "Kota Khatulistiwa," terletak di Provinsi Kalimantan Barat, Indonesia. Dengan Equator Monument yang menandai garis khatulistiwa dan Sungai Kapuas yang indah, kota ini menawarkan pengalaman unik. Jelajahi warisan budaya seperti Masjid Jami Pontianak dan Kota Tua Pontianak. Nikmati pesona kota ini yang kaya akan keindahan alam dan budaya.</p>
         </div>
-        <br/><a href="https://www.google.com">See More...</a>
+        <br/><a href="../Kota/Samarinda/samarinda.html">See More...</a>
       `;
       detailsBox.style.display = "block";
 
@@ -84,7 +84,7 @@
         <div class="tooltip-content">
           <p>Samarinda adalah ibu kota Provinsi Kalimantan Timur, Indonesia. Terkenal dengan Sungai Mahakam yang indah dan hutan bakau yang luas, kota ini menawarkan pengalaman alam yang menarik. Nikmati pemandangan sungai yang menakjubkan dan jelajahi kekayaan alamnya.</p>
         </div>
-        <br/><a href="https://www.google.com">See More...</a>
+        <br/><a href="../Kota/Samarinda/samarinda.html">See More...</a>
       `;
       detailsBox.style.display = "block";
 
@@ -155,7 +155,7 @@
         <div class="tooltip-content">
           <p>Jayapura adalah ibu kota Provinsi Papua, Indonesia, yang terletak di pantai utara Pulau Papua. Kota ini dikenal dengan keindahan alamnya yang menakjubkan, dengan pegunungan yang mempesona dan air terjun yang spektakuler. Selain itu, Jayapura juga memiliki pesona pantai yang memikat dan danau-danau yang menyejukkan. Tempat ini merupakan surga bagi para pecinta alam dan penggemar petualangan yang ingin menjelajahi kekayaan alam Papua yang eksotis.</p>
         </div>
-        <br/><a href="https://www.google.com">See More...</a>
+        <br/><a href="../Kota/Jayapura/jayapura.html">See More...</a>
       `;
       detailsBox.style.display = "block";
 
@@ -169,7 +169,7 @@
         <div class="tooltip-content">
           <p>Sorong, terletak di Provinsi Papua Barat, Indonesia, adalah gerbang utama untuk menjelajahi keindahan alam Papua yang menakjubkan. Kota ini terkenal sebagai titik awal untuk menuju Raja Ampat, sebuah surga bagi penyelam dengan keanekaragaman hayati bawah laut yang luar biasa. Selain itu, Sorong juga menawarkan pantai-pantai yang indah, pulau-pulau eksotis, dan hutan-hutan yang mempesona. Bagi para petualang dan pencinta alam, Sorong menjadi pintu masuk yang menarik untuk menjelajahi keajaiban alam yang tak ternilai di Papua Barat.</p>
         </div>
-        <br/><a href="https://www.google.com">See More...</a>
+        <br/><a href="../Kota/Sorong/sorong.html">See More...</a>
       `;
       detailsBox.style.display = "block";
 
