--- a/Kota/jayapura/jayapura.html
+++ b/Kota/jayapura/jayapura.html
@@ -111,7 +111,7 @@
     <div class="container-wisata">
       <div class="cont-items">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Air Terjun Cyclop</p>
+          <p>Air Terjun</p>
         </div>
         <div class="centerForm">
             <p>Destinasi Air Terjun Cyclop Jayapura merupakan salah satu wisata alam murah meriah alias tidak mahal. Pemandangan yang tersaji di air terjun tersebut sangatlah indah apalagi di beberapa sudut air terjunnya. Tidak mengherankan jika ramai orang yang mengabadikan pemandangan di Air Terjun Cyclop secara langsung.</p>
