--- a/Kota/Samarinda/samarinda.html
+++ b/Kota/Samarinda/samarinda.html
@@ -111,7 +111,7 @@
     <div class="container-wisata">
       <div class="cont-items">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Pulau Kumala Tenggarong</p>
+          <p>Pulau</p>
         </div>
         <div class="centerForm">
             <p>Pulau Kumala merupakan daerah delta di Sungai Mahakam yang memanjang di sebelah Barat Kota Tenggarong, Kabupaten Kutai Kartanegara. Dimulai pada tahun 2000, Pulau Kumala dibangun menjadi daerah wisata. Namun semenjak Bupati Syaukani Hasan Rais, yang mendirikan pulau ini, terjegal kasus korupsi pada tahun 2006, pembangunan Pulau Kumala menjadi mangkrak.</p>
@@ -119,7 +119,7 @@
       </div>
       <div class="cont-items1">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Samarinda Islamic Center</p>
+          <p>Islamic Center</p>
         </div>
         <div class="centerForm">
             <p>Masjid Islamic Center Samarinda (MICS) menjadi ikon syiar Islam yang dibanggakan masyarakat kota setempat dan Provinsi Kalimantan Timur umumnya. Masjid yang berlokasi di Kelurahan Teluk Lerong Ulu, Kota Samarinda, Kalimantan Timur, itu tak jauh dari tepi Sungai Mahakam. Dengan luas bangunan utama yang mencapai 43.500 meter persegi, rumah ibadah ini merupakan masjid terbesar kedua di seluruh Asia Tenggara, yakni sesudah Masjid Istiqlal Jakarta.</p>
@@ -127,7 +127,7 @@
       </div>
       <div class="cont-items2">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Air Terjun Pinang Seribu</p>
+          <p>Pinang Seribu</p>
         </div>
         <div class="centerForm">
             <p>Lokasi Air Terjun Pinang Seribu terletak di daerah sempaja, dengan alamat Kelurahan Sempaja Utara, Kecamatan Samarinda Utara, Kota Samarinda, Provinsi Kalimantan Timur. Air Terjun Pinang Seribu merupakan air terjun yang tidak terlalu tinggi. Ketinggian Air Terjun Pinang Seribu sekitar 5 meter, dengan kemiringan hanya 45 derajat. Airnya sangat jernih, namun di waktu-waktu tertentu kondisi airnya berubah kecoklat-coklatan. View di sekitar air terjun di dominasi bebatuan besar.</p>
@@ -135,7 +135,7 @@
       </div>
       <div class="cont-items3">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Teluk Lerong Garden</p>
+          <p>Teluk</p>
         </div>
         <div class="centerForm">
             <p>Wisata Teluk Lerong Garden tidaklah sulit untuk ditemukan. Sebab destinasi ini berada di tempat yang terbilang sangat strategis. Dari pusat kota saja tidak terlalu jauh. Lebih tepatnya destinasi ini berada di Jalan R. E. martadinata, Teluk Lerong Ilir, Samarinda Ulu, Kota Samarinda, Kalimantan Timur. Di tengah banyak pilihan wisata alam lain, destinasi cantik ini terus di gemari pengunjung. Sebab tawaran keindahan pemandangan begitu tersaji secara sempurna.</p>
@@ -143,7 +143,7 @@
       </div>
       <div class="cont-items4">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Desa Budaya Pampang</p>
+          <p>Desa Pampang</p>
         </div>
         <div class="centerForm">
             <p>Desa Pampang terletak sekitar 17 Km arah Utara dari Terminal Lempake. Kawasan wisata budaya ini merupakan hasil migrasi penduduk desa long lis Apo Kayan Kabupaten Bulungan pada tahun 1973. Daya tarik utama yang dapat disaksikan adalah rumah adat Lamin, tari tarian, wanita dayak telinga panjang, upacara adat serta kehidupan sehari- hari suku dayak kenyah secara lebih dekat dimana mayoritas mata pencahariannya bercocok tanam.</p>
